# test-gfx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  copy_compile_commands.sh
engine/: .eslintrc.yaml  application.ts  chassis.ts  copy.sh  engine.ts  generator.ts  index.ts  package-lock.json  package.json  shader-chunks.ts  start.sh  test-base.ts  test.sh  test.ts  tsconfig.json  util.sh
engine-native/base/: CMakeLists.txt
engine-native/bindings/: CMakeLists.txt
engine-native/renderer/: CMakeLists.txt
engine-native/renderer/frame-graph/: CMakeLists.txt
engine-native/renderer/gfx-agent/: CMakeLists.txt
engine-native/renderer/gfx-base/: CMakeLists.txt
engine-native/renderer/gfx-empty/: CMakeLists.txt
engine-native/renderer/gfx-gles-common/: CMakeLists.txt
engine-native/renderer/gfx-metal/: CMakeLists.txt
engine-native/renderer/gfx-nvn/: CMakeLists.txt
engine-native/renderer/gfx-validator/: CMakeLists.txt
engine-native/renderer/gfx-vulkan/: CMakeLists.txt
engine/base/: CMakeLists.txt
engine/bindings/: CMakeLists.txt
engine/math/: color.ts  index.ts  mat3.ts  mat4.ts  quat.ts  type-define.ts  vec2.ts  vec3.ts  vec4.ts
engine/primitive/: box.ts  define.ts  index.ts  sphere.ts
engine/renderer/: CMakeLists.txt
engine/renderer/frame-graph/: CMakeLists.txt
engine/renderer/gfx-agent/: CMakeLists.txt
engine/renderer/gfx-base/: CMakeLists.txt
engine/renderer/gfx-empty/: CMakeLists.txt
engine/renderer/gfx-gles2/: CMakeLists.txt
engine/renderer/gfx-gles3/: CMakeLists.txt
engine/renderer/gfx-metal/: CMakeLists.txt
engine/renderer/gfx-validator/: CMakeLists.txt
engine/renderer/gfx-vulkan/: CMakeLists.txt
engine/tests/: basic-sphere.ts  basic-triangle-ref.ts  basic-triangle.ts  clear-screen.ts  cube-texture.ts  depth-test.ts  engine-test.ts  index.ts  julia-set.ts  rotating-triangle.ts
engine/web-desktop/: application.js  index.html  index.js  style.css
engine/web-desktop/cocos-js/: constants.js  debug-info.js  system-info.js
engine/web-desktop/src/: import-map.json  settings.json
examples/: CMakeLists.txt
examples/GFXTestIOS/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  GameViewController.h  GameViewController.m
examples/GFXTestWin/: CMakeLists.txt  GameApp.cc  GameApp.h  MyApp.cc  MyApp.h  main.cc
native/base/: CMakeLists.txt
native/bindings/: CMakeLists.txt
native/renderer/: CMakeLists.txt
native/renderer/gfx-gles2/: CMakeLists.txt
native/renderer/gfx-gles3/: CMakeLists.txt
native/renderer/gfx-metal/: CMakeLists.txt
native/renderer/gfx-nvn/: CMakeLists.txt
src/: CMakeLists.txt  MainHack.cpp
src/Resources/: boids.js  chassis.js  main.js  simple.js
src/android/: build.gradle  gradle.properties  settings.gradle
src/android/app/: android.keystore  build.gradle
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/cpp/: CMakeLists.txt  EventDispatcher.cpp  EventDispatcher.h  JniImp.cpp  JniImp.h  main.cpp
src/android/app/src/main/res/values/: strings.xml
src/android/gradle/wrapper/: gradle-wrapper.properties
src/ios/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  CMakeLists.txt  Info.plist  View.h  View.m  ViewController.h  ViewController.m  main.m
src/mac/: AppDelegate.h  AppDelegate.m  CCView.mm  CMakeLists.txt  Info.plist  TestView.h  TestView.mm  TestViewController.h  TestViewController.mm  View.h  View.mm  ViewController.h  ViewController.mm  main.m
src/mac-gles/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  Info.plist  main.m
src/mac/Base.lproj/: Main.storyboard
src/mac2/: CMakeLists.txt  GameApp.h  GameApp.mm  main.mm
src/nx/: CMakeLists.txt  GameApp.cc  GameApp.h  main.cc
src/win/: CMakeLists.txt  GameApp.cc  GameApp.cpp  GameApp.h  MyApp.cc  MyApp.h  ViewHack.cpp  main.cc
tests/: BasicMipMapTest.cc  BasicMipMapTest.h  BasicTextureTest.cc  BasicTextureTest.h  BasicTriangleTest.cc  BasicTriangleTest.h  BlendTest.cc  BlendTest.h  BunnyTest.cc  BunnyTest.h  CMakeLists.txt  ClearScreenTest.cc  ClearScreenTest.h  ComputeTest.cc  ComputeTest.h  DeferredTest.cc  DeferredTest.h  DepthTest.cc  DepthTest.h  FrameGraphTest.cc  FrameGraphTest.h  MultiViewportTest.cc  MultiViewportTest.h  Multithread.cc  Multithread.h  ParticleTest.cc  ParticleTest.h  ScriptTest.cc  ScriptTest.h  StandardPipelineUtils.cpp  StandardPipelineUtils.h  StencilTest.cc  StencilTest.h  StressTest.cc  StressTest.h  SubpassTest.cc  SubpassTest.h  TestBase.cpp  TestBase.h
tests/ScriptTest/: Boids.cpp  Boids.h  Chassis.cpp  Chassis.h  Math.h  Render.cpp  ScriptTest.cc  ScriptTest.h  Transform.cpp  Transform.h  boids.ini  chassis.ini  jsb_boids_auto.cpp  jsb_boids_auto.h  jsb_chassis_auto.cpp  jsb_chassis_auto.h  jsb_transform_auto.cpp  jsb_transform_auto.h  supp_math.h  transform.ini
tests/utils/: FullscreenQuad.cpp  FullscreenQuad.h  Math.h  StandardPipelineUtils.cpp  StandardPipelineUtils.h  supp_math.h
